test/semantics/programs/valid/exhaustive-match-using-else.guav
# Should cover all possible matches for x using "_"

match x with
    | 1 -> print("one")
    | 2 -> print("two")
    | 3 -> print("three")
    | _ -> print("what comes after three?")
